# routes/api.php
@@ -148,7 +148,6 @@ Route::middleware(['auth:sanctum'])->group(function () {
     Route::get('/reports/technician/{user_id}/weekly-comparison', [ReportController::class, 'getTechnicianWeeklyComparison'])->middleware('permission:view-technician-reports');
 
     // Survey routes
-    Route::get('/surveys', [SurveyController::class, 'index'])->middleware('permission:view-surveys');
     Route::post('/surveys', [SurveyController::class, 'store'])->middleware('permission:create-surveys');
     Route::get('/surveys/{id}', [SurveyController::class, 'show'])->middleware('permission:view-surveys');
     Route::put('/surveys/{id}', [SurveyController::class, 'update'])->middleware('permission:edit-surveys');
